--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Title of the project here</title>
-		<style>
-		body { margin: 0; }
-		</style>
-	</head>
-	<body>
-		<script type="module" src="/main.js"></script>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Two Boxes with Camera & Light Controls</title>
+    <style>
+        body { margin: 0; overflow: hidden; background: #000; color: white; font-family: sans-serif; }
+        canvas { display: block; }
+        .controls {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background: rgba(0, 0, 0, 0.6);
+            padding: 10px;
+            border-radius: 8px;
+            font-size: 14px;
+        }
+        label { display: block; margin: 4px 0; }
+    </style>
+</head>
+<body>
+    <canvas id="qwe"></canvas>
+
+    <div class="controls">
+        <h3>💡 Light Controls</h3>
+        <label>Color: <input type="color" id="lightColor" value="#ffffff"></label>
+        <label>Intensity: <input type="range" id="lightIntensity" min="0" max="10" step="0.1" value="3"></label>
+        <label>X: <input type="range" id="lightX" min="-5" max="5" step="0.1" value="-1"></label>
+        <label>Y: <input type="range" id="lightY" min="-5" max="5" step="0.1" value="2"></label>
+        <label>Z: <input type="range" id="lightZ" min="-5" max="5" step="0.1" value="4"></label>
+
+        <h3>🎥 Camera Controls</h3>
+        <label>X: <input type="range" id="camX" min="-5" max="5" step="0.1" value="0"></label>
+        <label>Y: <input type="range" id="camY" min="-5" max="5" step="0.1" value="0"></label>
+        <label>Z: <input type="range" id="camZ" min="0.5" max="10" step="0.1" value="2"></label>
+    </div>
+
+    <script type="module" src="main.js"></script>
+</body>
 </html>
